--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Webpack + React</title>
   </head>
-  <body></body>
-  <script src="app.js"></script>
+  <body>
+  	<script src="app.js"></script>
+  </body>
+  
 </html>
