--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Webpack + React</title>
-  </head>
-  <body>
-  	<script src="app.js"></script>
-  </body>
-  
+<head>
+	<meta charset="utf-8">
+	<title>Webpack + React</title>
+	<link rel="stylesheet" href="./css/font-awesome.min.css">
+</head>
+<body>
+	<script src="app.js"></script>
+</body>
+
 </html>
