--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="./css/font-awesome.min.css">
 </head>
 <body>
+  <!-- Including the Google Maps API and the GMaps library -->
+  <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.min.js"></script>
 	<script src="app.js"></script>
 </body>
 
